make generation process more explicit to the user

--- a/frontend/components/CreateTransForm.module.scss
+++ b/frontend/components/CreateTransForm.module.scss
@@ -24,11 +24,11 @@
 }
 
 .errorMessage {
-    font-size: g.$font-size-md;
+    font-size: g.$font-size-sub;
     color: g.$color-error;
 }
 
 .successMessage {
-    font-size: g.$font-size-md;
+    font-size: g.$font-size-sub;
     color: g.$color-success;
 }
