--- a/frontend/app/globals.scss
+++ b/frontend/app/globals.scss
@@ -4,6 +4,7 @@ $color-hover: #d87a00;
 $bg-color-primary-light: white;
 $bg-color-secondary-1-light: rgb(224, 224, 224);
 $bg-color-secondary-2-light: rgb(199, 199, 199);
+$bg-color-navlink-focus: rgb(212, 212, 212);
 
 $color-success: #10B981;
 $color-error: #EF4444;
