--- a/frontend/components/NavLink.module.scss
+++ b/frontend/components/NavLink.module.scss
@@ -26,8 +26,11 @@
         gap: 0.5rem;
         padding: 0.75rem 1rem;
         width: 100%;
-    
         text-decoration: none;
         color: inherit;
     }
-} 
+}
+
+.focused {
+    background-color: globals.$bg-color-navlink-focus;
+}
