--- a/frontend/app/(home)/page.module.scss
+++ b/frontend/app/(home)/page.module.scss
@@ -12,3 +12,12 @@
         text-decoration: underline;
     }
 }
+
+.homeTitle {
+    font-size: 2.25rem;
+
+    @media (min-width: 768px) {
+        font-size: 2.75rem;
+        
+    }
+}
