add SpinnerButton component

--- a/frontend/app/globals.scss
+++ b/frontend/app/globals.scss
@@ -8,6 +8,7 @@ $bg-color-navlink-focus: rgb(212, 212, 212);
 
 $color-success: #10B981;
 $color-error: #EF4444;
+$color-error-hover: #a30000;
 
 $font-size-xs: 0.5rem;
 $font-size-sm: 0.75rem;
