--- a/frontend/components/Transformation.module.scss
+++ b/frontend/components/Transformation.module.scss
@@ -95,6 +95,14 @@
         opacity: 0.7;
         cursor: not-allowed;
     }
+
+    &.deleteButton {
+        background-color: g.$color-error;
+
+        &:hover:not(:disabled) {
+            background-color: g.$color-error-hover;
+        }
+    }
 }
 
 .imgPlaceholderText {
